--- a/source/app/components/wi-logplot/template/toolbar/index.html
+++ b/source/app/components/wi-logplot/template/toolbar/index.html
@@ -1,99 +1,99 @@
 
-<wi-toolbar name="Databases1Toolbar" icon="" label="" layout="" description="" type="">
-		<wi-button name="EditFormatButton" icon="" label="" layout="" description="" type="small" handler="handlers.EditFormatButtonClicked">
+<wi-toolbar name="Databases1Toolbar" icon="" label="" layout="" description="" type="" tooltip="">
+		<wi-button name="EditFormatButton" icon="" label="" layout="" description="" type="small" tooltip="Edit Format" handler="handlers.EditFormatButtonClicked">
 
 		</wi-button>
-		<wi-button name="SaveAsLogplotButton" icon="save-16x16" label="" layout="" description="" type="small" handler="handlers.SaveAsLogplotButtonClicked">
+		<wi-button name="SaveAsLogplotButton" icon="save-16x16" label="" layout="" description="" type="small" tooltip="Save as Logplot Template" handler="handlers.SaveAsLogplotButtonClicked">
 
 		</wi-button>
-		<wi-button name="SaveAsButton" icon="save-as-16x16" label="" layout="" description="" type="small" handler="handlers.SaveAsButtonClicked">
+		<wi-button name="SaveAsButton" icon="save-as-16x16" label="" layout="" description="" type="small" tooltip="Save As" handler="handlers.SaveAsButtonClicked">
 
 		</wi-button>
-		<wi-button name="PrintButton" icon="print-16x16" label="" layout="" description="" type="small" handler="handlers.PrintButtonClicked">
+		<wi-button name="PrintButton" icon="print-16x16" label="" layout="" description="" type="small" tooltip="Print" handler="handlers.PrintButtonClicked">
 
 		</wi-button>
-		<wi-button name="PrintToImageButton" icon="" label="" layout="" description="" type="small" handler="handlers.PrintToImageButtonClicked">
+		<wi-button name="PrintToImageButton" icon="" label="" layout="" description="" type="small" tooltip="Print To Image" handler="handlers.PrintToImageButtonClicked">
 
 		</wi-button>
-		<wi-dropdown name="ScaleButton" icon="scale-16x16" label="" layout="" description="" type="small">
+		<wi-dropdown name="ScaleButton" icon="scale-16x16" label="" layout="" description="" type="small" tooltip="Scale">
 
 		</wi-dropdown>
 
 </wi-toolbar>
-<wi-toolbar name="Databases2Toolbar" icon="" label="" layout="" description="" type="small">
-		<wi-button name="ZoomInButton" icon="zoom-in-16x16" label="" layout="" description="" type="small" handler="handlers.ZoomInButtonClicked">
+<wi-toolbar name="Databases2Toolbar" icon="" label="" layout="" description="" type="" tooltip="">
+		<wi-button name="ZoomInButton" icon="zoom-in-16x16" label="" layout="" description="" type="small" tooltip="" handler="handlers.ZoomInButtonClicked">
 
 		</wi-button>
-		<wi-button name="ZoomOutButton" icon="zoom-out-16x16" label="" layout="" description="" type="small" handler="handlers.ZoomOutButtonClicked">
+		<wi-button name="ZoomOutButton" icon="zoom-out-16x16" label="" layout="" description="" type="small" tooltip="" handler="handlers.ZoomOutButtonClicked">
 
 		</wi-button>
 
 </wi-toolbar>
-<wi-toolbar name="Databases3Toolbar" icon="" label="" layout="" description="" type="small">
-		<wi-button name="CropDisplayButton" icon="plot-range-16x16" label="" layout="" description="" type="small" handler="handlers.CropDisplayButtonClicked">
+<wi-toolbar name="Databases3Toolbar" icon="" label="" layout="" description="" type="" tooltip="">
+		<wi-button name="CropDisplayButton" icon="plot-range-16x16" label="" layout="" description="" type="small" tooltip="Crop display" handler="handlers.CropDisplayButtonClicked">
 
 		</wi-button>
-		<wi-dropdown name="RangeSpecificDropdown" icon="plot-range-specific-16x16" label="" layout="" description="" type="small">
+		<wi-dropdown name="RangeSpecificDropdown" icon="plot-range-specific-16x16" label="" layout="" description="" type="small" tooltip="">
 
 		</wi-dropdown>
-		<wi-button name="ViewWholeWellButton" icon="plot-whole-well-16x16" label="" layout="" description="" type="small" handler="handlers.ViewWholeWellButtonClicked">
+		<wi-button name="ViewWholeWellButton" icon="plot-whole-well-16x16" label="" layout="" description="" type="small" tooltip="View Whole Well" handler="handlers.ViewWholeWellButtonClicked">
 
 		</wi-button>
 
 </wi-toolbar>
-<wi-toolbar name="Databases4Toolbar" icon="" label="" layout="" description="" type="small">
-		<wi-button name="AddDepthAxisButton" icon="depth-axis-add-16x16" label="" layout="" description="" type="small" handler="handlers.AddDepthAxisButtonClicked">
+<wi-toolbar name="Databases4Toolbar" icon="" label="" layout="" description="" type="" tooltip="">
+		<wi-button name="AddDepthAxisButton" icon="depth-axis-add-16x16" label="" layout="" description="" type="small" tooltip="Add Deph Axis" handler="handlers.AddDepthAxisButtonClicked">
 
 		</wi-button>
-		<wi-button name="NewTrackButton" icon="logplot-new-16x16" label="" layout="" description="" type="small" handler="handlers.NewTrackButtonClicked">
+		<wi-button name="NewTrackButton" icon="logplot-new-16x16" label="" layout="" description="" type="small" tooltip="New Track" handler="handlers.NewTrackButtonClicked">
 
 		</wi-button>
-		<wi-button name="DuplicateTrackButton" icon="track-duplicate-16x16" label="" layout="" description="" type="small" handler="handlers.DuplicateTrackButtonClicked">
+		<wi-button name="DuplicateTrackButton" icon="track-duplicate-16x16" label="" layout="" description="" type="small" tooltip="Duplicate Track" handler="handlers.DuplicateTrackButtonClicked">
 
 		</wi-button>
-		<wi-button name="DeleteTrackButton" icon="track-delete-16x16" label="" layout="" description="" type="small" handler="handlers.DeleteTrackButtonClicked">
-
-		</wi-button>
-
-</wi-toolbar>
-<wi-toolbar name="Databases5Toolbar" icon="" label="" layout="" description="" type="small">
-		<wi-button name="AddMarkerButton" icon="marker-add-16x16" label="" layout="" description="" type="small" handler="handlers.AddMarkerButtonClicked">
-
-		</wi-button>
-		<wi-button name="AddZoneButton" icon="zone-edit-16x16" label="" layout="" description="" type="small" handler="handlers.AddZoneButtonClicked">
-
-		</wi-button>
-		<wi-button name="AnnotationsButton" icon="annotation-16x16" label="" layout="" description="" type="small" handler="handlers.AnnotationsButtonClicked">
-
-		</wi-button>
-		<wi-button name="AddImageButton" icon="image-add-16x16" label="" layout="" description="" type="small" handler="handlers.AddImageButtonClicked">
-
-		</wi-button>
-		<wi-button name="AddShadingButton" icon="shading-add-16x16" label="" layout="" description="" type="small" handler="handlers.AddShadingButtonClicked">
-
-		</wi-button>
-		<wi-button name="RemoveVisualButton" icon="visual-remove-16x16" label="" layout="" description="" type="small" handler="handlers.RemoveVisualButtonClicked">
+		<wi-button name="DeleteTrackButton" icon="track-delete-16x16" label="" layout="" description="" type="small" tooltip="Delete Track" handler="handlers.DeleteTrackButtonClicked">
 
 		</wi-button>
 
 </wi-toolbar>
-<wi-toolbar name="Databases6Toolbar" icon="" label="" layout="" description="" type="small">
-		<wi-button name="CrossPlotButton" icon="crossplot-new-16x16" label="" layout="" description="" type="small" handler="handlers.CrossPlotButtonClicked">
+<wi-toolbar name="Databases5Toolbar" icon="" label="" layout="" description="" type="" tooltip="">
+		<wi-button name="AddMarkerButton" icon="marker-add-16x16" label="" layout="" description="" type="small" tooltip="Add Marker" handler="handlers.AddMarkerButtonClicked">
 
 		</wi-button>
-		<wi-button name="HistogramButton" icon="histogram-new-16x16" label="" layout="" description="" type="small" handler="handlers.HistogramButtonClicked">
+		<wi-button name="AddZoneButton" icon="zone-edit-16x16" label="" layout="" description="" type="small" tooltip="Add Zone" handler="handlers.AddZoneButtonClicked">
+
+		</wi-button>
+		<wi-button name="AnnotationsButton" icon="annotation-16x16" label="" layout="" description="" type="small" tooltip="Annotations" handler="handlers.AnnotationsButtonClicked">
+
+		</wi-button>
+		<wi-button name="AddImageButton" icon="image-add-16x16" label="" layout="" description="" type="small" tooltip="Add Image" handler="handlers.AddImageButtonClicked">
+
+		</wi-button>
+		<wi-button name="AddShadingButton" icon="shading-add-16x16" label="" layout="" description="" type="small" tooltip="Add Shading" handler="handlers.AddShadingButtonClicked">
+
+		</wi-button>
+		<wi-button name="RemoveVisualButton" icon="visual-remove-16x16" label="" layout="" description="" type="small" tooltip="Remove Visual" handler="handlers.RemoveVisualButtonClicked">
 
 		</wi-button>
 
 </wi-toolbar>
-<wi-toolbar name="Databases7Toolbar" icon="" label="" layout="" description="" type="">
-		<wi-checkbox name="FitWindowCheckbox" icon="" label="" layout="" description="" type="">
+<wi-toolbar name="Databases6Toolbar" icon="" label="" layout="" description="" type="" tooltip="">
+		<wi-button name="CrossPlotButton" icon="crossplot-new-16x16" label="" layout="" description="" type="small" tooltip="Cross Plot" handler="handlers.CrossPlotButtonClicked">
+
+		</wi-button>
+		<wi-button name="HistogramButton" icon="histogram-new-16x16" label="" layout="" description="" type="small" tooltip="Histogram" handler="handlers.HistogramButtonClicked">
+
+		</wi-button>
+
+</wi-toolbar>
+<wi-toolbar name="Databases7Toolbar" icon="" label="" layout="" description="" type="" tooltip="">
+		<wi-checkbox name="FitWindowCheckbox" icon="" label="Fit Window" layout="" description="" type="" tooltip="">
 
 		</wi-checkbox>
-		<wi-checkbox name="ReferenceLineCheckbox" icon="" label="" layout="" description="" type="">
+		<wi-checkbox name="ReferenceLineCheckbox" icon="" label="Reference Line" layout="" description="" type="" tooltip="">
 
 		</wi-checkbox>
-		<wi-checkbox name="TooltipCheckbox" icon="" label="" layout="" description="" type="">
+		<wi-checkbox name="TooltipCheckbox" icon="" label="Tool tip" layout="" description="" type="" tooltip="">
 
 		</wi-checkbox>
 
