--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -7,14 +7,14 @@ img {
 
 }
 
-<<<<<<< HEAD
-.form-horizontal .control-label {
-    text-align: left;
-	font-style: normal !important;
-
-}
-=======
->>>>>>> update well add new dialog
+//<<<<<<< HEAD
+//.form-horizontal .control-label {
+//    text-align: left;
+//	font-style: normal !important;
+//
+//}
+//=======
+//>>>>>>> update well add new dialog
 
 .modal-footer button {
 	width: 100px;
