--- a/source/app/components/wi-explorer/wi-explorer.html
+++ b/source/app/components/wi-explorer/wi-explorer.html
@@ -1,18 +1,18 @@
 
-<wi-toolbar name="DatabasesToolbar" icon="" label="" layout="" description="" type="">
-		<wi-dropdown name="ImportProjectButton" icon="import-file" label="Import" layout="" description="" type="small">
+<wi-toolbar name="DatabasesToolbar" icon="" label="" layout="" description="" type="" ="">
+		<wi-dropdown name="ImportProjectButton" icon="import-file" label="Import" layout="" description="" type="small" ="">
 
 		</wi-dropdown>
-		<wi-button name="ReloadProjectButton" icon="reload-16x16" label="Reload" layout="" description="" type="small" handler="handlers.ReloadProjectButtonClicked">
+		<wi-button name="ReloadProjectButton" icon="reload-16x16" label="Reload" layout="" description="" type="small" ="" handler="handlers.ReloadProjectButtonClicked">
 
 		</wi-button>
-		<wi-button name="CollapseProjectButton" icon="apply-16x16" label="Apply" layout="" description="" type="small" handler="handlers.CollapseProjectButtonClicked">
+		<wi-button name="CollapseProjectButton" icon="apply-16x16" label="Apply" layout="" description="" type="small" ="" handler="handlers.CollapseProjectButtonClicked">
 
 		</wi-button>
-		<wi-button  name="DeleteProjectButton" icon="delete-16x16" label="Delete" layout="" description="" type="small">
+		<wi-button  name="DeleteProjectButton" icon="delete-16x16" label="Delete" layout="" description="" type="small" ="">
 
 		</wi-button >
-		<wi-button  name="BrowseProjectButton" icon="browse-project" label="Browse project" layout="" description="" type="small">
+		<wi-button  name="BrowseProjectButton" icon="browse-project" label="Browse project" layout="" description="" type="small" ="">
 
 		</wi-button >
 
