--- a/source/less/main.less
+++ b/source/less/main.less
@@ -24,7 +24,8 @@ body{
     flex: 1 1 auto;
 }
 .ribbon-wrapper {
-    max-height: 136px;
+    //max-height: 136px;
+    height: 136px;
 }
 .status-bar {
     width: 100%;
