--- a/source/app/components/wi-d3/wi-d3.html
+++ b/source/app/components/wi-d3/wi-d3.html
@@ -1,2 +1,2 @@
-<div id='{{wiD3.plotAreaId}}' class='d3-region'>
+<div ng-mousedown='wiD3.contextMenu($event)' id='{{wiD3.plotAreaId}}' class='d3-region'>
 </div>
