--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -4,8 +4,9 @@
 }
 .track-header {
     width: 100%;
-    height: 100px;
+    //height: 100px;
     overflow-y: scroll;
+    flex: 1;
     label {
         //font-size: 6px;
         display: block;
@@ -22,10 +23,11 @@
 }
 .plot-container {
     position: relative;
+    height: 340px;
     //display: flex;
     //width: 250px;
     width: 100%;
-    flex: 1;
+    //flex: 1;
 //    border: 1px dashed gray;
 }
 canvas, svg {
@@ -52,6 +54,13 @@ canvas, svg {
 .resizer {
     width: 2px;
     cursor: col-resize;
+}
+.vresizer {
+    height: 5px;
+    background-color: lightgray;
+    border-radius: 3px;
+    width: 100%;
+    cursor: row-resize;
 }
 .ref-line {
     cursor: col-resize;
