--- a/source/app/components/wi-explorer/template/toolbar/index.html
+++ b/source/app/components/wi-explorer/template/toolbar/index.html
@@ -1,6 +1,33 @@
 
 <wi-toolbar name="DatabasesToolbar" icon="" label="" layout="" description="" type="">
-		<wi-dropdown name="ImportProjectButton" icon="import-file" label="Import" layout="" description="" type="small">
+		<wi-dropdown name="ImportProjectDropdown" icon="import-file" label="Import" layout="" description="" type="small">
+				<wi-button name="ImportASCIIButton" icon="ascii-import-16x16" label="Import ASCII" layout="" description="" type="small" handler="handlers.ImportASCIIButtonClicked">
+
+				</wi-button>
+				<wi-button name="ImportMultiASCIIButton" icon="ascii-import-16x16" label="Import Multi ASCII" layout="" description="" type="small" handler="handlers.ImportMultiASCIIButtonClicked">
+
+				</wi-button>
+				<wi-button name="ImportLASButton" icon="las-import-16x16" label="Import LAS" layout="" description="" type="small" handler="handlers.ImportLASButtonClicked">
+
+				</wi-button>
+				<wi-button name="ImportMultiLASButton" icon="las-import-16x16" label="Import Multi LAS" layout="" description="" type="small" handler="handlers.ImportMultiLASButtonClicked">
+
+				</wi-button>
+				<wi-button name="ImportDLISButton" icon="" label="Import DLIS" layout="" description="" type="small" handler="handlers.ImportDLISButtonClicked">
+
+				</wi-button>
+				<wi-button name="Interval/CoreLoaderButton" icon="load-16x16" label="Interval/Core Loader" layout="" description="" type="small" handler="handlers.Interval_CoreLoaderButtonClicked">
+
+				</wi-button>
+				<wi-button name="MultiWellCoreLoaderButton" icon="load-16x16" label="Multi Well Core Loader" layout="" description="" type="small" handler="handlers.MultiWellCoreLoaderButtonClicked">
+
+				</wi-button>
+				<wi-button name="ImportWellHeaderButton" icon="las-import-16x16" label="Import Well Header" layout="" description="" type="small" handler="handlers.ImportWellHeaderButtonClicked">
+
+				</wi-button>
+				<wi-button name="ImportWellTopButton" icon="las-import-16x16" label="Import Well Top" layout="" description="" type="small" handler="handlers.ImportWellTopButtonClicked">
+
+				</wi-button>
 
 		</wi-dropdown>
 		<wi-button name="ReloadProjectButton" icon="reload-16x16" label="Reload" layout="" description="" type="small" handler="handlers.ReloadProjectButtonClicked">
