--- a/source/components/wi-treeview/wi-treeview.html
+++ b/source/components/wi-treeview/wi-treeview.html
@@ -1,4 +1,4 @@
-<div class="wi-treeview-container" ng-repeat="item in wiTreeview.items track by $index">
+<div class="wi-treeview-container" ng-repeat="item in wiTreeview.config track by $index">
     <div class="wi-parent-node"
          ng-class='{"item-active": item.name == wiTreeview.getItemActiveName()}'
          ng-click="wiTreeview.onClick($index)"
