wi-button, wi-dropdown: style disabled button

--- a/source/components/wi-button/wi-button.less
+++ b/source/components/wi-button/wi-button.less
@@ -28,6 +28,10 @@ wi-button, wi-toolbar-button {
             &:active {
                 background: rgba(204,226,213,1);
             }
+
+            &:disabled {
+                opacity: 0.5;
+            }
         }
     }
 
