--- a/source/components/wi-dropdown/wi-dropdown.less
+++ b/source/components/wi-dropdown/wi-dropdown.less
@@ -25,6 +25,10 @@ wi-dropdown {
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6e2fd', endColorstr='#e9ecf7', GradientType=0 ); 
       box-shadow: inset 0px 1px 5px 0px rgba(0,0,0,0.15);
     }
+
+    &:disabled {
+      opacity: 0.5;
+    }
   }
 
   wi-button {
