--- a/source/components/wi-dropdown/wi-dropdown.html
+++ b/source/components/wi-dropdown/wi-dropdown.html
@@ -1,7 +1,7 @@
 <div class="dropdown">
     <button class="dropdown-toggle" type="button" data-toggle="dropdown"
             ng-click="wiDropdown.onClick()"
-            ng-disabled="wiDropdown.disabled">
+            ng-disabled='wiDropdown.isDisabled()'>
         <img class="{{wiDropdown.icon || wiDropdown.config.icon || wiDropdown.default.icon}}" alt="icon wi-dropdown">
         <div class="label-wrapper {{wiDropdown.layout || wiDropdown.config.layout || wiDropdown.default.layout}}">
             <span class="{{wiDropdown.layout || wiDropdown.config.layout || wiDropdown.default.layout}}"
