--- a/source/app/components/wi-explorer/wi-explorer.less
+++ b/source/app/components/wi-explorer/wi-explorer.less
@@ -1,13 +1,20 @@
 wi-explorer {
   .filter-block {
     display: flex;
+    margin: 0 auto 0 auto;
+    background: #c1c1c1;
+    padding: 5px 8px;
 
     span {
       margin: auto;
+      font-weight: bold;
+      color: #000;
     }
 
     input {
       flex: 1;
+      margin-left: 5px;
+      text-indent: 5px;
     }
   }
 
