--- a/source/components/wi-list/wi-list.less
+++ b/source/components/wi-list/wi-list.less
@@ -29,6 +29,7 @@ wi-list {
 		tr{
 			td{
 		 		border-right:1px solid #cacbd3; 
+		 		text-indent: 8px;
 		 	}
 		 	td:last-child{
 		 		border: none;
