--- a/source/components/wi-treeview/wi-treeview.less
+++ b/source/components/wi-treeview/wi-treeview.less
@@ -7,7 +7,6 @@ wi-treeview {
         display: block;
         cursor: pointer;
         padding: 5px 0 5px 10px;
-        border-bottom: 1px dotted #ddd;
         wi-treeview{
             border: none;
             border-left: 1px dotted #cacbd3;
@@ -20,7 +19,7 @@ wi-treeview {
                 right: 0;
                 top: 0;
                 bottom: 0;
-                width: 25%; // use fixed width here!
+                width: 100px; // use fixed width here!
                 overflow:hidden;
                 padding-right: 0.5em;
                 border-left: 1px dotted #ddd;
