parse well config from server and add it to treeview of explorer

--- a/source/app/components/wi-explorer/template/wi-explorer.html
+++ b/source/app/components/wi-explorer/template/wi-explorer.html
@@ -8,4 +8,4 @@
 <div class="label_treeview">
     <span>Name</span><span>Unit</span>
 </div>
-<wi-treeview config="wiExplorer.treeConfig"></wi-treeview>
+<wi-treeview name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig"></wi-treeview>
