--- a/source/components/wi-treeview/wi-treeview.less
+++ b/source/components/wi-treeview/wi-treeview.less
@@ -26,7 +26,12 @@ wi-treeview {
                 border-left: 1px dotted #ddd;
             }
             .icon-expanded {
-                min-width: 8px;
+                min-width: 16px;
+                height: 16px;
+            }
+
+            &>div {
+                display: inline-block;
             }
         }
 
