--- a/source/components/wi-treeview/wi-treeview.less
+++ b/source/components/wi-treeview/wi-treeview.less
@@ -30,8 +30,12 @@ wi-treeview {
                 height: 16px;
             }
 
-            &>div {
-                display: inline-block;
+            .wi-parent-content {
+                display: flex;
+
+                &>div {
+                    flex: 1;
+                }
             }
         }
 
