--- a/source/components/wi-dropdown/wi-dropdown.less
+++ b/source/components/wi-dropdown/wi-dropdown.less
@@ -48,4 +48,13 @@ wi-dropdown {
     margin: auto;
     display: block;
   }
+
+  .dropdown-normal {
+    padding: 5px;
+  }
+
+  .dropdown-small {
+    padding: 0px;
+  }
 }
+
