rename description attr of treeview -> unit

--- a/source/components/wi-treeview/wi-treeview.html
+++ b/source/components/wi-treeview/wi-treeview.html
@@ -16,8 +16,8 @@
             </div>
         </div>
 
-        <div class="wi-parent-description text-right" ng-show="item.data.description">
-            {{item.data.description}}
+        <div class="wi-parent-unit text-right" ng-show="item.data.unit">
+            {{item.data.unit}}
         </div>
     </div>
 
