--- a/source/components/wi-treeview/wi-treeview.less
+++ b/source/components/wi-treeview/wi-treeview.less
@@ -15,7 +15,7 @@ wi-treeview {
         .wi-parent-node {
             position: relative;
             
-            .wi-parent-description {
+            .wi-parent-unit {
                 position: absolute;
                 right: 0;
                 top: 0;
