project context menu

--- a/source/components/wi-context-menu/wi-context-menu.html
+++ b/source/components/wi-context-menu/wi-context-menu.html
@@ -1,5 +1,5 @@
-<div ng-if="wiContextMenu.shown" ng-click="wiContextMenu.dismiss()" wi-right-click="wiContextMenu.dismiss()" class="context-menu-backdrop">
-    <div class="context-menu-wrapper" style="top:{{wiContextMenu.top}}px; left:{{wiContextMenu.left}}px">
+<div ng-show="wiContextMenu.shown" ng-click="wiContextMenu.dismiss()" wi-right-click="wiContextMenu.dismiss()" class="context-menu-backdrop">
+    <div class="context-menu-wrapper" style="top:{{wiContextMenu.top}}px; left:{{wiContextMenu.left}}px;">
         <wi-button ng-repeat='button in wiContextMenu.buttons'
                    name='{{wiContextMenu.name + "." + button.name}}'
                    icon='{{button.icon}}'
