--- a/source/components/wi-context-menu/wi-context-menu.less
+++ b/source/components/wi-context-menu/wi-context-menu.less
@@ -1,5 +1,6 @@
 wi-context-menu {
     & > .context-menu-backdrop {
+        z-index: 99;
         display: block;
         position: fixed;
         top: 0px;
