--- a/source/components/wi-treeview/wi-treeview.html
+++ b/source/components/wi-treeview/wi-treeview.html
@@ -2,7 +2,7 @@
     <div class="wi-parent-node"
          ng-class='{"item-active": item.name == wiTreeview.getItemActiveName()}'
          data-curve="{{wiTreeview.config[$index].name}}"
-         wi-right-click="wiTreeview.contextMenu($event, $index)">
+         wi-right-click="wiTreeview.showContextMenu($event, $index)">
         <div class="wi-parent-content">
             <i aria-hidden="true" class="fa icon-expanded"
                ng-class="
@@ -25,6 +25,6 @@
     </div>
 
     <div ng-show="item.data.childExpanded">
-        <wi-treeview config="item.children"></wi-treeview>
+        <wi-treeview contextmenuholder={{wiTreeview.contextmenuholder}} config="item.children"></wi-treeview>
     </div>
 </div>
