add visualize module

--- a/source/components/wi-button/wi-button-test.html
+++ b/source/components/wi-button/wi-button-test.html
@@ -37,7 +37,7 @@
                handler="myHandler"></wi-button>
     <wi-button name='Test2Button' type="normal" label="Test button 2" icon="project-new-32x32" layout='icon-left'
                handler="myHandler"></wi-button>
-    <wi-button name='Test2Button' type="normal" label="Test button 2" icon="project-new-32x32" layout='icon-left'
+   <!-- <wi-button name='Test2Button' type="normal" label="Test button 2" icon="project-new-32x32" layout='icon-left'
                handler="myHandler"></wi-button>
     <wi-button name='Test2Button' type="normal" label="Test button 2" icon="project-new-32x32" layout='icon-top' 
                handler="myHandler"></wi-button>                                 
@@ -56,7 +56,7 @@
     <wi-button name='TestButton' type="small" label="Test uuasdf" icon="project-new-16x16" layout='icon-left'
                handler="myHandler"></wi-button>
     
-    <!-- <wi-button name='Test2Button' type="normal" label="Test button 2" icon="project-new-32x32" layout='icon-top'
+    <wi-button name='Test2Button' type="normal" label="Test button 2" icon="project-new-32x32" layout='icon-top'
                handler="myHandler"></wi-button>
 
     <wi-button name='NoLabelButton'></wi-button> -->
