--- a/source/app/components/wi-d3/wi-d3-test.html
+++ b/source/app/components/wi-d3/wi-d3-test.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="css/graph.css">
     <link rel="stylesheet" href="css/wi-d3.css">
+    <link rel="stylesheet" href="css/wi-context-menu.css">
 
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
@@ -21,6 +22,12 @@
     <script src="js/main-wi-d3.js.bundle.js"></script>
 
     <title>Test wi-d3</title>
+    <style>
+        wi-d3 {
+            margin: 5px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 
 <body ng-app='helloapp'>
@@ -28,6 +35,7 @@
 <div ng-controller="WiDummy">
     <button ng-click='doClick()'>Add Track</button>
     <wi-d3 style='height: 600px;' name="myPlot"></wi-d3>
+    <wi-context-menu name="ContextMenu"></wi-context-menu>
 </div>
 </body>
 </html>
