--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -35,6 +35,11 @@ canvas, svg {
     top:0; left:0; bottom:0; right:0;
     cursor: crosshair;
 }
+
+svg {
+    z-index: 1;
+}
+
 .grid .tick line {
     stroke: blue;
     stroke-dasharray: 20, 2;
