clean padding sliding bar

--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -4,7 +4,7 @@ wi-slidingbar {
   //background-color: #2b542c;
   background-color: #fff;
   margin: 4px;
-  padding: 4px;
+  //padding: 4px;
   overflow: hidden;
   width: 100%;
   flex: 1;
