--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -49,6 +49,7 @@
     </div>
     <wi-button name='removeCurveButton' label='remove curve' handler='removeCurveButtonClick'></wi-button>
     <wi-button name='removeTrackButton' label='remove track' handler='removeTrackButtonClick'></wi-button>
+    <wi-button name='addShadingkButton' label='add shading' handler='addShadingButtonClick'></wi-button>
     <wi-context-menu name='ContextMenu'></wi-context-menu>
 </div>
 </body>
