--- a/source/app/components/wi-d3/wi-d3.html
+++ b/source/app/components/wi-d3/wi-d3.html
@@ -1,2 +1,2 @@
-<div wi-right-click='wiD3.contextMenu($event)' id='{{wiD3.plotAreaId}}' class='d3-region'>
+<div wi-right-click='wiD3.showContextMenu($event)' id='{{wiD3.plotAreaId}}' class='d3-region'>
 </div>
